<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Translate">

    <TextView android:text="@string/your_lang" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/textView"
        android:textSize="20sp"
        android:layout_centerHorizontal="true" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:id="@+id/yourlang"
            android:layout_below="@+id/textView">

        <RadioButton android:id="@+id/your_english"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/english"
            android:onClick="yourLang"/>

        <RadioButton android:id="@+id/your_french"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/french"
            android:onClick="yourLang"/>

        <RadioButton android:id="@+id/your_chinese"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/chinese"
            android:onClick="yourLang"/>

    </RadioGroup>

    <TextView android:text="@string/phrase" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/yourlang"
        android:layout_marginTop="10dp"
        android:id="@+id/phrase"
        android:textSize="20sp"
        android:layout_centerHorizontal="true" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:id="@+id/phrase_ops"
        android:layout_below="@+id/phrase">

        <RadioButton android:id="@+id/hello"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:checked="true"
            android:text="@string/helloe"
            android:onClick="phrase"/>

        <RadioButton android:id="@+id/how_much"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/how_muche"
            android:onClick="phrase"/>

        <RadioButton android:id="@+id/please"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/pleasee"
            android:onClick="phrase"/>

        <RadioButton android:id="@+id/thank_you"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/thank_youe"
            android:onClick="phrase"/>

        <RadioButton android:id="@+id/goodbye"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/goodbyee"
            android:onClick="phrase"/>

    </RadioGroup>

    <TextView android:text="@string/result" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phrase_ops"
        android:layout_marginTop="20dp"
        android:id="@+id/result"
        android:textSize="20sp"
        android:layout_centerHorizontal="true" />

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/result"
        android:layout_marginTop="20dp"
        android:stretchColumns="1">

        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000"
                android:text="@string/english" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000"
                android:text="@string/french" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000"
                android:text="@string/chinese" />
        </TableRow>

        <TableRow
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/resulte"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="#000"
                android:text="@string/helloe" />
            <TextView
                android:id="@+id/resultf"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="#000"
                android:text="@string/hellof" />
            <TextView
                android:id="@+id/resultc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="#000"
                android:text="@string/helloc" />
        </TableRow>

    </TableLayout>

</RelativeLayout>
